--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome to My Website</h1>
     <p>This is a basic HTML page.</p>
     <ul>
-        <li>Home</li>
+        <li><a href=https://suban-iitd.github.io/Courses/QRMT_Monsoon2025/>QRMT</></li>
         <li>About</li>
         <li>Contact</li>
     </ul>
