--- a/Courses/index.html
+++ b/Courses/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Subhashis Banerjee's current courses</title>
+    <title>Subhashis Banerjee's courses</title>
 </head>
 <body>
-    <h1>Subhashis Banerjee's current courses</h1>
+    <h1>Subhashis Banerjee's courses</h1>
     <ul>
         <li><a href=https://suban-iitd.github.io/Courses/QRMT_Monsoon2025/>Quantitative Reasoning and Mathematical Thinking</></li>
         <li><a href=https://suban-iitd.github.io/Courses/InfoSec_Monsoon2025/>Information Security</></li>
