--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@
           <dd><a href="mailto:suban@ashoka.edu.in">suban@ashoka.edu.in</a></dd>
 
           <dt>Affiliation</dt>
-          <dd>Department of Computer Science, Ashoka University</dd>
-
-          <dt>Office</dt>
-          <dd>Sonipat, Haryana, India</dd>
+          <dd>Department of Computer Science, Ashoka University<br>
+          Sonipat, Haryana, India</dd>
         </dl>
         <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:8px">
           <a class="button primary" href="https://www.ashoka.edu.in/profile/subhashis-banerjee/" target="_blank" rel="noopener">Ashoka Profile</a>
@@ -295,6 +293,10 @@
           <a name="opeds"><h2 id="media">Commentaries</h2></a>
           <ul  class="commentary-list">
 
+<li><i></i><em><a href="https://www.cse.iitd.ac.in/~suban/reports/trustdeficit.pdf">Trust deficit in Artificial Intelligence.</a></em> Subhashis Banerjee. July 12, 2025. <a href="https://www.news18.com/opinion/opinion-the-trust-deficit-in-artificial-intelligence-ws-dl-9443857.html">in News18.com</a>,  July 16, 2025.</li>
+<li><i></i><em>Use of AI in healthcare.</em> Subhashis Banerjee.  <a href="https://open.spotify.com/episode/4mmko7vlIkBpyLin25vJ5t">Podcast with Jhalak Kakkar and Shashank Mohan</a>,  July 3, 2025.</li>
+<li><i></i><em><a href="https://www.cse.iitd.ac.in/~suban/reports/GenAI.pdf">When Machines Imagine: The Promise and the Risk.</a></em> Subhashis Banerjee. June 12, 2025. <a href="https://www.theindiaforum.in/society/when-machines-imagine-promise-and-risk">in The India Forum</a>,  June 19, 2025.</li>
+<li><i></i><em>Can you hack an Indian EVM?</em> Subhashis Banerjee.  <a href="https://youtu.be/c0_wuplXS5Y?si=EdOjP2XeEJHUWvJ2">Podcast with The Coffee House Experience (Bengali)</a>,  February 21, 2025.</li>
 <li><i><a href="https://www.cse.iitd.ac.in/~suban/reports/EVM.pdf">On EVMs and VVPAT</a></i>. Subhashis Banerjee. November 29, 2024.</li>
 <li><i></i><em><a href="https://www.cse.iitd.ac.in/~suban/reports/AGI.pdf">Can machines think?</a></em> Subhashis Banerjee. March 29, 2024. <a href="https://www.thehindu.com/sci-tech/technology/if-there-is-a-theory-of-ai-computer-science-is-unlikely-to-provide-it/article68049815.ece">in The Hindu</a>,  April 11, 2024.</li>
 <li><em><a href="https://www.cse.iitd.ac.in/~suban/reports/evm2.pdf">Trust and the machine: the nuances of electronic voting</a></em>. Subhashis Banerjee. November 15, 2023. <a href="https://indianexpress.com/article/opinion/columns/evms-are-reliable-but-the-election-commission-must-prove-that-9049277/">in The Indian Express</a>. December 1, 2023.</li>
