--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <span class="tag"><a href="#About">About</a></span>
         <span class="tag"><a href="#research">Current research</a></span>
         <span class="tag"><a href="#courses">Courses</a></span>
-        <span class="tag"><a href="#opeds">Commenraries</a></span>
+        <span class="tag"><a href="#opeds">Commentaries</a></span>
       </div>
     </header>
 
