--- a/index.html
+++ b/index.html
@@ -79,10 +79,18 @@
       box-shadow:var(--shadow);padding:18px
     }
     .sticky{position:sticky;top:18px}
-    .portrait{
+/*    .portrait{
       width:100%;aspect-ratio:4/5;border-radius:12px;object-fit:cover;border:1px solid var(--hair);
       background:linear-gradient(135deg,#eef1ff,#fff)
     }
+*/
+/* keeps it tidy on mobile and not too huge on desktop */
+.portrait {
+  width: clamp(140px, 40vw, 320px);
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+}
     .contact dt{font-weight:700;color:var(--brand-2)}
     .contact dd{margin:0 0 10px 0;color:var(--ink)}
     .button{
@@ -109,6 +117,8 @@
     .footer{
       text-align:center;color:var(--muted);font-size:13px;margin:28px 0 12px
     }
+    /* generic safe default */
+img, svg, video { max-width: 100%; height: auto; display: block; }
   </style>
 </head>
 <body>
