chanked course links

--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
         <section class="section" aria-labelledby="teaching" id="teaching">
           <a name="courses"><h2>Current course(s)</h2></a>
           <ul>
-<li><span style="font-weight: 400;">Quantitative Reasoning and Mathematical Thinking (QRMT) <a class="pill" href="https://suban-iitd.github.io/Courses/QRMT_Monsoon2025/" target=_blank aria-label="QRMT">Course page</a></span></li>
-<li><span style="font-weight: 400;">Information Security <a class="pill" href="https://suban-iitd.github.io/Courses/InfoSec_Monsoon2025/" target=_blank aria-label="InfoSec">Course page</a></span></li>
+<li><span style="font-weight: 400;">Quantitative Reasoning and Mathematical Thinking (QRMT) <a class="pill" href="Courses/QRMT_Monsoon2025/" target=_blank aria-label="QRMT">Course page</a></span></li>
+<li><span style="font-weight: 400;">Information Security <a class="pill" href="Courses/InfoSec_Monsoon2025/" target=_blank aria-label="InfoSec">Course page</a></span></li>
           </ul>
 	<p>
           <h2>Courses taught</h2>
