--- a/index.html
+++ b/index.html
@@ -172,41 +172,23 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
 /* ===== Side panel scroll fix (add at the very end of your CSS) ===== */
 
 /* Desktop/tablet: keep sticky, but let the sidebar scroll within the viewport */
-@media (min-width: 721px) {
-  .left {
-    position: sticky;          /* keep your sticky behavior */
-    top: 18px;                 /* adjust to your header height if needed */
-    max-height: calc(100vh - 36px);  /* fit inside the viewport */
-    overflow: auto;            /* its own scroll if taller than viewport */
-    -webkit-overflow-scrolling: touch;
-  }
-  /* Sticky breaks if ancestors clip; make sure these don’t create a scroll context */
-  .grid, .wrap {
-    overflow: visible !important;
+/* Desktop/large screens: keep it sticky */
+@media (min-width: 1024px) {
+  .sidebar {
+    position: sticky;
+    top: 1rem;          /* adjust as you like */
+    align-self: start;  /* if using grid */
+    height: max-content;
   }
 }
 
-/* Mobile: disable sticky + inner scrolling traps, let the PAGE scroll naturally */
-@media (max-width: 720px) {
-  .grid {                      /* stack columns (if you already do, this won't hurt) */
-    display: block;
-  }
-  .left {
-    position: static !important;   /* turn off sticky on phones */
-    top: auto !important;
-    height: auto !important;
-    max-height: none !important;
-    overflow: visible !important;  /* no inner scroll on the sidebar */
-  }
-  /* Main content must not be inside a fixed-height scroller on phones */
-  .panel {
-    height: auto !important;
-    max-height: none !important;
-    overflow: visible !important;  /* the page does the scrolling */
-  }
-  /* Safety net: if any ancestor was clipping, stop it on mobile */
-  .container, .wrap, .grid {
-    overflow: visible !important;
+/* Mobile/tablet: let it flow with the page */
+@media (max-width: 1023px) {
+  .sidebar {
+    position: static;   /* or `relative` */
+    top: auto;
+    height: auto;
+    width: auto;
   }
 }
   nav a { padding: 0.5rem 0.75rem; display:inline-block; }
