--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
       <p class="roles">Professor, Department of Computer Science · Ashoka University</p>
       <div class="tags" aria-label="Research areas">
         <span class="tag"><a href="#About">About</a></span>
-        <span class="tag"><a href="#research">Current research</a></span>
+        <span class="tag"><a href="#research">Recent research</a></span>
         <span class="tag"><a href="#courses">Courses</a></span>
         <span class="tag"><a href="#opeds">Commentaries</a></span>
       </div>
@@ -252,7 +252,7 @@ img, svg, video { max-width: 100%; height: auto; display: block; }
         </section>
 
         <section class="section" aria-labelledby="research">
-          <a name="research"><h2 id="research">Current research interests</h2></a>
+          <a name="research"><h2 id="research">Recent research</h2></a>
 																		<div class="tab-pane fade "
 										id="CurrentResearch"
 										role="tabpanel" aria-labelledby="v-pills-settings-tab">
